2014-09-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (user_add): Set guest according to username.  This ensures
	that the user is marked as guest even when logged in with a password,
	which results in the session being used for generic guest links too.
	(user_find): Remove user->guest init.  Now done in user_add.

2014-09-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (struct user): Add guest flag.
	(user_add): Init guest flag.
	(user_find): When the special token is given and the guest user has an
	existing session in the browser, then use the existing session.  This
	prevents the generic guest links from logging the guest out on another
	tab, for example.

2014-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_get): Default to dashboard in get_info case, to
	match the first item in the SecInfo menu.

	* src/gsad_omp.c (dashboard): Default dashboard name to SecInfo.

2014-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	Allow users to have multiple simultaneous sessions, as long as the
	sessions are on different browsers.

	* src/gsad.c (user_add): Remove all previous users that have timed out.
	Always add a new user.
	(user_set_timezone, user_set_password, user_set_severity)
	(user_set_language, user_set_language_code, user_set_charts)
	(user_set_chart_pref, user_set_autorefresh): Change name arg to token.
	(exec_omp_post): Set user prefs in session by token instead of by name.

2014-09-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Remember last filt_id on each list page for the current session.

	* src/gsad_base.h (credentials_t): Add field last_filt_ids.

	* src/gsad_omp.c (get_many, get_report): Save type specific filt_id in
	current session data if it is given and retrieve it if neither filt_id
	nor filter is given.

	* src/gsad.c (user): Add field last_filt_ids.
	(user_add): Create last_filt_ids.
	(exec_omp_post, request_handler): Copy last_filt_id from user to